# i-have-dependencies

./: .gitignore
test-bun/: package.json
test-elixir/: mix.exs
test-elixir/kv/: mix.exs
test-elixir/lib/: test_elixir.ex
test-go/: go.mod
test-gradle/: settings.gradle.kts
test-gradle/app/: build.gradle.kts
test-gradle/app/src/main/java/org/example/: App.java
test-gradle/app/src/test/java/org/example/: AppTest.java
test-npm/: package-lock.json  package.json
test-pnpm/: package.json  pnpm-lock.yaml
test-poetry/: pyproject.toml
test-poetry/tests/: test_math.py
test-ruby/: .gitignore
test-ruby/spec/: example_spec.rb
test-rust/: .gitignore  Cargo.toml
test-rust/src/: main.rs
test-uv/: pyproject.toml
test-yarn/: index.js  package.json
