[project]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Joshua Ma",email = "joshma@openai.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "test_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
